<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color"
    tools:context="com.devcraft.currencyassistant.presentation.ui.mainFragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_26sdp"
            android:background="@drawable/top_bar">

            <TextView
                style="@style/ToolBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="8dp"
                android:text="@string/currency_assistant_ToolBar"
                android:textSize="@dimen/_20ssp" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="22dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_title_news">

                    <TextView
                        style="@style/ToolBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        android:text="@string/news_title"
                        android:textSize="@dimen/_18ssp" />

                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp" />


                <TextView
                    android:id="@+id/btnViewMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/ubuntu_regular"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/orange_color"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/ViewMore"
                    android:textSize="14sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/into_to_crypto"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp" />

        <TextView
            style="@style/ToolBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="16dp"
            android:text="@string/crypto"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet_list_crypto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/bg_bottom_sheet_behavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="8dp"
            android:background="@drawable/line_for_bottom_sheet"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_preview_crypto_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_crypto_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginVertical="16dp"/>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>