<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color"
    android:orientation="vertical"
    tools:context=".presentation.ui.conversion.ConversionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar">

        <TextView
            style="@style/ToolBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:text="@string/currency_assistant_ToolBar"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_btn"
            android:rotation="180"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="22dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_title_news"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/ToolBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        android:text="@string/conversion"
                        android:textSize="@dimen/_18ssp" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/fromCurrencyCont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:maxLines="1"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <AutoCompleteTextView
                            android:id="@+id/fromCurrency"
                            style="@style/AutoCompTVCustom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btc"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <EditText
                        android:id="@+id/fieldFromCurrencyValue"
                        style="@style/FieldCurrencyValueCustom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="22dp"
                        android:paddingVertical="10dp"
                        android:text="@string/startValueForFieldConvert"
                        tools:ignore="Autofill,LabelFor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_and_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@color/black" />

                    <FrameLayout
                        android:id="@+id/btn_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_btn_convert"
                            tools:ignore="ContentDescription" />

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/toCurrencyCont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <AutoCompleteTextView
                            android:id="@+id/toCurrency"
                            style="@style/AutoCompTVCustom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/eth"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <EditText
                        android:id="@+id/fieldToCurrencyValue"
                        style="@style/FieldCurrencyValueCustom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="22dp"
                        android:paddingVertical="10dp"
                        android:text="@string/startValueForFieldConvert"
                        tools:ignore="Autofill,LabelFor" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>